[package]
name = "actix-async-test"
version = "0.1.0"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
rust-s3 = { path = "lib/rust-s3"}
actix-http = "0.2.9"
futures = "0.1.28"
